--- a/style.css
+++ b/style.css
@@ -583,3 +583,77 @@ input:checked + .slider:before {
     color: #aaa;
     cursor: pointer;
 }
+
+/* クレジット表記 */
+.credits {
+    margin-top: 15px;
+    padding-top: 15px;
+    border-top: 1px solid #eee;
+}
+
+.credit-item a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    padding: 5px 0;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.credit-item a:hover {
+    background-color: #f0f0f0;
+}
+
+.credit-item .icon {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+
+.x-icon {
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 3px;
+    font-family: sans-serif;
+    font-size: 14px;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1200 1227' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6904H308.864L607.439 515.974L655.001 583.959L1048.38 1157.9H883.526L569.165 687.854V687.828Z' fill='white'/%3E%3C/svg%3E");
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.image-icon {
+    border: 2px solid #555;
+    border-radius: 3px;
+    position: relative;
+}
+
+.image-icon::before {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 6px;
+    height: 6px;
+    background-color: #555;
+    border-radius: 50%;
+}
+
+.image-icon::after {
+    content: '';
+    position: absolute;
+    bottom: 3px;
+    right: 3px;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 8px solid #555;
+    transform: rotate(-45deg);
+    transform-origin: bottom right;
+}
